syntax = "proto3";
package DomainServices.DocumentOnSAService;
option csharp_namespace = "DomainServices.DocumentOnSAService.Contracts";

import "google/protobuf/wrappers.proto";
import "Enums.proto";

message DocumentOnSA {

	// Unikátní identifikátor DocumentuOnSA
	google.protobuf.Int32Value DocumentOnSAId = 1;
	
	google.protobuf.Int32Value DocumentTypeId = 2;

	// Id z modré instance eArchivu
	string FormId = 3;

	google.protobuf.Int32Value HouseholdId = 4;

	bool IsValid = 5;

	bool IsSigned = 6;
	
	bool IsArchived = 7;

	google.protobuf.Int32Value SignatureTypeId = 8;

	google.protobuf.StringValue EArchivId  = 9;

	DomainServices.DocumentOnSAService.Enums.Source Source = 10;

	int32 SalesArrangementId = 11;

	google.protobuf.Int32Value EACodeMainId = 12;
}